modules/grammars/language/src/test/resources/cocos/invalid/UniqueIdentifierParent.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package invalid

language UniqueIdentifierParent {
    template undeclareExisting {
        path "SomePath"
        label "Some Label"

        option someOption: String {
            label "Some Option"
        }
    }
}
